[gd_scene load_steps=25 format=3 uid="uid://b0w6h67e8opsf"]

[ext_resource type="Script" path="res://pages/character_card/character_card.gd" id="1_tvd34"]
[ext_resource type="FontFile" uid="uid://cmoj7ex21pgtg" path="res://asset/fonts/思源宋体 CN-Medium.otf" id="1_v6h5y"]
[ext_resource type="Texture2D" uid="uid://6v5sci0wa0ra" path="res://asset/UI/屏幕截图 2024-06-02 132500.png" id="2_26ao5"]
[ext_resource type="Texture2D" uid="uid://oqgdoa1pvi67" path="res://asset/UI/添加.svg" id="4_rvmrr"]
[ext_resource type="Theme" uid="uid://cbra74d4qris6" path="res://assets/theme/default.tres" id="4_w8iif"]
[ext_resource type="Texture2D" uid="uid://bykn1q5iawir5" path="res://assets/icons/加2.png" id="5_77xsq"]
[ext_resource type="Texture2D" uid="uid://28o6oh7nug8f" path="res://asset/UI/添加 (1).svg" id="5_bsi2y"]
[ext_resource type="Texture2D" uid="uid://bgejivkkk3417" path="res://assets/icons/hash井号.png" id="6_8of48"]
[ext_resource type="FontFile" uid="uid://bqeanl0rvmlbo" path="res://assets/fonts/SourceHanSerif-VF.otf.ttc" id="7_uqbmc"]
[ext_resource type="Texture2D" uid="uid://me0fm7jrv4dh" path="res://assets/icons/trashcan回收站.png" id="8_3jndp"]
[ext_resource type="PackedScene" uid="uid://c820bgbncshpb" path="res://pages/character_card/scroll_container.tscn" id="11_o0ul6"]

[sub_resource type="Theme" id="Theme_8mf1a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wby1w"]
content_margin_left = 50.0
content_margin_top = 40.0
content_margin_right = 50.0
content_margin_bottom = 40.0
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_auekb"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.733333, 0.733333, 0.733333, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nu2s1"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.733333, 0.733333, 0.733333, 0.392157)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b55x7"]

[sub_resource type="Theme" id="Theme_2dslk"]
Label/colors/font_color = Color(0.882353, 0.831373, 0.741176, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 40
Label/fonts/font = ExtResource("1_v6h5y")
Label/styles/normal = SubResource("StyleBoxEmpty_b55x7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6njlt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbbcf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wn4ni"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4frv"]
bg_color = Color(0.882353, 0.831373, 0.741176, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_op2n6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eludw"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.733333, 0.733333, 0.733333, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nv5bm"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="CharacterCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource("4_w8iif")
script = ExtResource("1_tvd34")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0185185
anchor_right = 1.0
anchor_bottom = 1.01852
offset_top = 20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8mf1a")
theme_override_styles/panel = SubResource("StyleBoxFlat_wby1w")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 11

[node name="character_num" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_uqbmc")
theme_override_font_sizes/font_size = 30
text = "11"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_uqbmc")
theme_override_font_sizes/font_size = 30
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 11

[node name="tag_num_label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_uqbmc")
theme_override_font_sizes/font_size = 30
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_uqbmc")
theme_override_font_sizes/font_size = 30
text = "Tag"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxFlat_auekb")

[node name="character_graph" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
texture_normal = ExtResource("2_26ao5")
ignore_texture_size = true
stretch_mode = 0

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxFlat_nu2s1")

[node name="HBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_2dslk")
theme_override_font_sizes/font_size = 40
text = "标签"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_6njlt")

[node name="tag_tree_lucky" type="Tree" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_w8iif")
hide_root = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="tag_add_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "选择标签后点击添加为其子节点"
theme = ExtResource("4_w8iif")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fbbcf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wn4ni")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m4frv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_op2n6")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/tag_add_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_77xsq")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("4_w8iif")
texture = ExtResource("6_8of48")
expand_mode = 1

[node name="tag_edit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_w8iif")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(1, 0.843137, 0.25098, 1)
theme_override_fonts/font = ExtResource("7_uqbmc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_eludw")
placeholder_text = "新标签"
max_length = 12
expand_to_text_length = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
color = Color(1, 0.843137, 0.25098, 1)

[node name="character_tag_added_error" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("4_w8iif")
theme_override_colors/font_color = Color(0.976471, 0.862745, 0.360784, 1)
theme_override_font_sizes/font_size = 23
text = "新标签不能为空"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="tag_del_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "选择标签后点击进行删除，而且会删除memo中相应标签"
theme = ExtResource("4_w8iif")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fbbcf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wn4ni")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m4frv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_op2n6")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/tag_del_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_3jndp")
expand_mode = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_w8iif")
theme_override_colors/font_color = Color(0.631373, 0.631373, 0.631373, 1)
theme_override_font_sizes/font_size = 25
text = "       回收站"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="hbcontainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/hbcontainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2/hbcontainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.882353, 0.831373, 0.741176, 1)
theme_override_fonts/font = ExtResource("1_v6h5y")
theme_override_font_sizes/font_size = 40
text = "Character Card"

[node name="TextureButton" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer2/hbcontainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("4_rvmrr")
texture_pressed = ExtResource("5_bsi2y")
ignore_texture_size = true
stretch_mode = 0

[node name="HScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_nv5bm")
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="all_card_container" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/HScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/HScrollContainer/all_card_container" instance=ExtResource("11_o0ul6")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 0)
layout_mode = 2

[node name="Timer" type="Timer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/character_graph" to="." method="_on_character_graph_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer2/tag_tree_lucky" to="." method="_on_tag_tree_lucky_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/tag_add_button" to="." method="_on_tag_add_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/tag_del_button" to="." method="_on_tag_del_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/hbcontainer/TextureButton" to="." method="_on_texture_button_pressed"]
